--- a/src/app/employee/employee.component.html
+++ b/src/app/employee/employee.component.html
@@ -1,14 +1,3 @@
-<table border="1">
-  <thead></thead>
-  <tr>
-    <th>name</th>
-    <th>designation</th>
-    </tr>
-  
-  <tbody>
-      <tr *ngFor="let employee of employees">
-          <td>{{employee.name}}</td>
-          <td>{{employee.designation}}</td>
-          </tr>
-  </tbody>
-    </table>
+<p>
+  employee works!
+</p>
