Fix cross domain, added lite server

--- a/src/app/employee-details/employee-details.component.html
+++ b/src/app/employee-details/employee-details.component.html
@@ -6,5 +6,5 @@
     <label>ID: </label> {{employee.id}}
   </div>
   <div>
-    <label>Salary: </label> {{employee.Salary}}
+    <label>Salary: </label> {{employee.salary}}
   </div>
