--- a/src/app/employee-list/employee-list.component.html
+++ b/src/app/employee-list/employee-list.component.html
@@ -1,6 +1,5 @@
 
  
-<div *ngFor="let employee of employees | async" style="width: 300px;">
+<div *ngFor="let employee of employees" style="width: 300px;">
   <employee-details [employee]='employee'></employee-details>
-</div>
- 
+ </div>
