added create employe module" " ,

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,6 +3,8 @@
  
   <nav>
     <a routerLink="employees"  role="button" routerLinkActive="active">Employees</a>
+    <p></p>
+    <a routerLink="add" class="btn btn-primary active" role="button" routerLinkActive="active">Add</a>
 </nav>
   <router-outlet></router-outlet>
 </div>
